# jupyter-on-vscode

./: .gitattributes  .gitignore  Dockerfile  docker-compose.yml  download_youtube.ipynb  jupyter_on_vscode.ipynb  make_gif.ipynb  nandemo.ipynb  pdf_editor.ipynb  pngtopdf.ipynb  pyproject.toml  satellite.py  satellite_image.ipynb  video_edit.ipynb
.devcontainer/: devcontainer.json
docker/: FoAinConatiner.sh  test.sh
src/: compare_images.ipynb  download_youtube.ipynb  experinece_data_cleaning.ipynb  list_directory.py  pc_usage.ipynb  pngtopdf.ipynb  satellite.py  satellite_image.ipynb  test_GPS_on_linux.ipynb
