[tool.poetry]
name = "jupyte-on-vscode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jupyte_on_vscode"}]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
numpy = "^1.25.1"
youtube-dl = "^2021.12.17"
yt-dlp = "^2023.7.6"
twitch-dl = "^2.1.3"
moviepy = "^1.0.3"
tqdm = "^4.66.1"
ipywidgets = "^8.1.0"
pydub = "^0.25.1"
gradio = "^3.40.1"
pypdf2 = "^3.0.1"
notion = "^0.0.28"
player = "^0.6.1"
plyer = "^2.1.0"
pdf2image = "^1.16.3"
python-pptx = "^0.6.22"
reportlab = "^4.0.5"
pillow = "9.5.0"
pywin32 = "^306"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
