[tool.poetry]
name = "jupyter-on-vscode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reportlab = "^4.0.5"
pillow = "^10.0.1"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
psycopg2 = "^2.9.8"
earthengine-api = "^0.1.371"
sentinelhub = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
